--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^6.2.1
   fl_chart: ^0.70.2
   table_calendar: ^3.2.0
+  flutter_settings_screens: ^0.3.4
 
 dev_dependencies:
   flutter_test:
