--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   fl_chart: ^0.70.2
   table_calendar: ^3.2.0
   flutter_settings_screens: ^0.3.4
+  sqflite: ^2.3.0
+  path: ^1.8.3
 
 dev_dependencies:
   flutter_test:
